--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: objective-c
 osx_image : xcode8
 xcode_project: RocketCast.xcodeproj
-xcode_scheme: RocketCast
+xcode_scheme: RocketCastTests
 xcode_sdk: iphonesimulator10.0
 script:
-  - xcodebuild -project RocketCast.xcodeproj -scheme RocketCast -sdk iphonesimulator  
+  - xcodebuild -project RocketCast.xcodeproj -scheme RocketCast -sdk iphonesimulator
   - xcodebuild test -project RocketCast.xcodeproj -scheme RocketCastTests -sdk iphonesimulator
 notifications:
   slack: ubclaunchpad:9yrC0XnC8DqCSlAJbLewhEPG
