--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ xcode_scheme: RocketCastTests
 xcode_sdk: iphonesimulator10.0
 script:
   - xcodebuild -project RocketCast.xcodeproj -scheme RocketCast -sdk iphonesimulator
-  - xcodebuild test -project RocketCast.xcodeproj -scheme RocketCastTests -sdk iphonesimulator
+  - xcodebuild test -project RocketCast.xcodeproj -scheme RocketCastTests -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.0'
 notifications:
   slack: ubclaunchpad:9yrC0XnC8DqCSlAJbLewhEPG
